fixed footer icon clipping

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -41,7 +41,7 @@ footer {
     .ir();
     display: inline-block;
     background-image: url('/images/footerlinks-sprite.svg');
-    background-size: auto 100%;
+    background-size: 416px 35px;
     background-repeat: no-repeat;
     width: 36px;
     height: 35px;
@@ -125,7 +125,6 @@ section {
     .container {
       padding-bottom: 0;
     }
-
     .footer-link {
       background-size: 917px 77px;
       width: 79px;
